# judicatura

./: .gitignore  Makefile  pyproject.toml  requirements.txt  requirements_ec.txt  run_st_app.ps1
data/: deploy_ec.md  judicial_sentences.json
judicatura/: 1_using_models.py  2_embeddings.py  app.py  helpers.py  judicial_examples.py  slides copy.py  slides.py
