[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "judicatura"
version = "0.0.1"
description = "Presentacion pour la Judicatura, Quito."
authors = [
  { name = "Analitika" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | judicatura/judicatura/data
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["judicatura"]
force_sort_within_sections = true
skip = [".venv"]
